crates/tui/tests/storybook/snapshots/app_status__quota_pause.manual.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---

 Finish the current task.





  › Then run the tests.
─ quota exceeded · paused ──────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────────────
 ○ normal                                                               1:1 100%
