crates/tui/tests/storybook/snapshots/app_status__quota_pause.narrow.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
                           14:37:03
 Finish the current task.





  › Then run the tests.
─ quota exceeded ───────────────────

────────────────────────────────────
 ○ normal                   1:1 100%
